changes with repos, not compiled mb

--- a/presentation/splash/src/main/res/layout/splash_view.xml
+++ b/presentation/splash/src/main/res/layout/splash_view.xml
@@ -12,13 +12,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:showError="@{viewModel.errorText}">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.title}"/>
-    </FrameLayout>
+        app:showError="@{viewModel.errorText}" />
 </layout>
 
